<resources>
    <string name="login">登陆</string>
    <string name="exit">退出</string>
    <string name="other">其他</string>
    <string name="backup">备份</string>
    <string name="location">定位</string>
    <string name="phone">电话</string>
    <string name="email">邮箱</string>
    <string name="friends">朋友圈</string>
    <string name="comment">评论</string>
    <string name="note">记事本</string>
</resources>