<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/note"
            android:icon="@drawable/ic_note"
            android:title="@string/note" />
        <item
            android:id="@+id/comment"
            android:icon="@drawable/ic_comment"
            android:title="@string/comment" />
        <item
            android:id="@+id/friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/friends" />
        <item
            android:id="@+id/emial"
            android:icon="@drawable/ic_email"
            android:title="@string/email" />
        <item
            android:id="@+id/phone"
            android:icon="@drawable/ic_phone"
            android:title="@string/phone" />
        <item
            android:id="@+id/location"
            android:icon="@drawable/ic_location"
            android:title="@string/location" />
        <item
            android:id="@+id/backup"
            android:icon="@drawable/ic_backup"
            android:title="@string/backup" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/login"
                android:title="@string/login" />
            <item
                android:id="@+id/exit"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>